gcc/testsuite/rust/rustc/ui/error-codes/E0425.rs
trait Foo {
    fn bar() {
        elf; // { dg-error ".E0425." "" { target *-*-* } }
    }
}

fn main () {
}

